# real_time_glint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
media/dictionary/: dict_16_192_64_0p5_0p02_0000_0000.exr  dict_16_192_64_0p5_0p02_0000_0001.exr  dict_16_192_64_0p5_0p02_0000_0002.exr  dict_16_192_64_0p5_0p02_0000_0003.exr  dict_16_192_64_0p5_0p02_0000_0004.exr  dict_16_192_64_0p5_0p02_0000_0005.exr  dict_16_192_64_0p5_0p02_0000_0006.exr  dict_16_192_64_0p5_0p02_0000_0007.exr  dict_16_192_64_0p5_0p02_0000_0008.exr  dict_16_192_64_0p5_0p02_0000_0009.exr  dict_16_192_64_0p5_0p02_0000_0010.exr  dict_16_192_64_0p5_0p02_0000_0011.exr  dict_16_192_64_0p5_0p02_0000_0012.exr  dict_16_192_64_0p5_0p02_0000_0013.exr  dict_16_192_64_0p5_0p02_0000_0014.exr  dict_16_192_64_0p5_0p02_0000_0015.exr  dict_16_192_64_0p5_0p02_0001_0000.exr  dict_16_192_64_0p5_0p02_0001_0001.exr  dict_16_192_64_0p5_0p02_0001_0002.exr  dict_16_192_64_0p5_0p02_0001_0003.exr  dict_16_192_64_0p5_0p02_0001_0004.exr  dict_16_192_64_0p5_0p02_0001_0005.exr  dict_16_192_64_0p5_0p02_0001_0006.exr  dict_16_192_64_0p5_0p02_0001_0007.exr  dict_16_192_64_0p5_0p02_0001_0008.exr  dict_16_192_64_0p5_0p02_0001_0009.exr  dict_16_192_64_0p5_0p02_0001_0010.exr  dict_16_192_64_0p5_0p02_0001_0011.exr  dict_16_192_64_0p5_0p02_0001_0012.exr  dict_16_192_64_0p5_0p02_0001_0013.exr  dict_16_192_64_0p5_0p02_0001_0014.exr  dict_16_192_64_0p5_0p02_0001_0015.exr  dict_16_192_64_0p5_0p02_0002_0000.exr  dict_16_192_64_0p5_0p02_0002_0001.exr  dict_16_192_64_0p5_0p02_0002_0002.exr  dict_16_192_64_0p5_0p02_0002_0003.exr  dict_16_192_64_0p5_0p02_0002_0004.exr  dict_16_192_64_0p5_0p02_0002_0005.exr  dict_16_192_64_0p5_0p02_0002_0006.exr  dict_16_192_64_0p5_0p02_0002_0007.exr  (+984 more)
opengl/: CMakeLists.txt  camera.h  glslprogram.cpp  glslprogram.h  glutils.cpp  glutils.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.h  scenerunner.h  texture.cpp  texture.h  tinyexr.h
real_time_glint/: CMakeLists.txt  main.cpp  sceneglint.cpp  sceneglint.h
real_time_glint/shader/: glint.frag.glsl  glint.vert.glsl
